--- a/01-Login/package.json
+++ b/01-Login/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.5",
     "angular": "^1.6.1",
-    "angular-auth0": "^3.0.0",
-    "auth0-js": "^9.0.1",
+    "angular-lock": "3.0.0",
+    "auth0-lock": "11.6.1",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0"
   },
